--- a/autoNewLine/test.tex
+++ b/autoNewLine/test.tex
@@ -14,7 +14,7 @@
 \author[2,3]{Darth Sidious%
   \thanks{Electronic address: \texttt{palpatine@empire.gove}; Corresponding author}}
 
-\affil[1]{Office of the Supreme Commander of the Imperial Foces, The Galactic Empire, The Bridge, Executor}
+\affil[1]{Office of the Supreme Commander of the Imperial Forces, The Galactic Empire, The Bridge, Executor}
 \affil[2]{\protect \RaggedRight Order of the Sith Lords, LiMerge Power Building, The Works, Coruscant}
 \affil[3]{Office of the Emperor of the Galaxy, The Galactic Empire, 1000 Imperial Palace, 2 Main St. Coruscant}
 
