made some more logos

--- a/logos/logos.tex
+++ b/logos/logos.tex
@@ -5,7 +5,7 @@
 \usepackage{blindtext}
 
 \newcommand{\BEBraise}{0.74ex}
-\newcommand{\BEBhspace}{\hspace{-0.4ex}}
+\newcommand{\BEBhspace}{\hspace{-0.2em}}
 \newcommand{\BEBsig}{%
 \raisebox{\BEBraise}{B}%
   \BEBhspace E\BEBhspace%
@@ -16,6 +16,11 @@
 
 BEB
 
+B\hspace{-0.23em}E\hspace{-0.23em}B
+
+B\hspace{-0.29em}E\hspace{-0.23em}B
+
+\textit{B\hspace{-0.305em}E\hspace{-0.25em}B}
 
 %\vspace{2ex}
 
@@ -23,7 +28,7 @@ BEB
 
 \textit{\BEBsig}
 
-\renewcommand{\BEBhspace}{\hspace{-0.9ex}}
+\renewcommand{\BEBhspace}{\hspace{-0.9em}}
 \BEBsig
 }
 
