added declareGraphicsRule example

--- a/autoNewLine/test.tex
+++ b/autoNewLine/test.tex
@@ -24,7 +24,7 @@
 \author[1,2]{Darth Vader}%
 
 \author[2,3]{Darth Sidious%
-  \thanks{Electronic address: \texttt{palpatine@empire.gove}; Corresponding author}}
+  \thanks{Electronic address: \texttt{palpatine@empire.gov}; Corresponding author}}
 
 \affil[1]{Office of the Supreme Commander of the Imperial Forces, The Galactic Empire, The Bridge, Executor}
 \affil[2]{Order of the Sith Lords, LiMerge Power Building, The Works, Coruscant}
