added tikz transition example

--- a/picture_with_includegraphics/test.tex
+++ b/picture_with_includegraphics/test.tex
@@ -1,5 +1,9 @@
 \documentclass[compress,red,notes]{beamer}
 
+% one solution is to use the picture package instead of
+% strip@pt:
+% http://tex.stackexchange.com/questions/183218/using-textwidth-via-strippt-with-beamer-and-the-picture-environment
+
 \begin{document}
 
 \frame{\frametitle{An overview to constraint-based modeling}
