added note to Kevin C's working solution

--- a/tikz_and_beamer_only/test.tex
+++ b/tikz_and_beamer_only/test.tex
@@ -3,6 +3,9 @@
 % updated to non-working solution based on:
 % http://tex.stackexchange.com/questions/55806/mindmap-tikzpicture-in-beamer-reveal-step-by-step/55849#55849
 
+% for working solution see:
+% http://tex.stackexchange.com/questions/183393/using-tikz-diagrams-in-beamer-with-minor-differences-between-slides
+
 \usepackage{tikz}
 
 \tikzstyle{line} = [draw, very thick, color=black!50]
